--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Floix - Onepage Resume Bootstrap Template</title>
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/2-bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -213,7 +213,7 @@
 
 <!-- JS FILES --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
+<script src="js/2-bootstrap.min.js"></script> 
 <script src="js/jquery.fancybox.pack.js"></script> 
 <script src="js/retina.min.js"></script> 
 <script src="js/modernizr.js"></script> 
