--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
   <div class="container-fluid">
     <div class="row no-gutter">
 
-      <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-1.jpg" class="work-box"> 
+      <div class="col-lg-2 col-md-4 col-sm-4 work"> <img src="images/work-1.jpg" alt="">
+        
         <!-- overlay --> 
         </a> </div>
       <div class="col-lg-2 col-md-4 col-sm-4 work"> <a href="images/work-2.jpg" class="work-box"> <img src="images/work-2.jpg" alt="">
