--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Floix - Onepage Resume Bootstrap Template</title>
+<title>Fiona S.</title>
 <link rel="stylesheet" href="css/2-bootstrap.min.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
 <link rel="stylesheet" href="css/main.css">
@@ -40,6 +40,7 @@
         <ul class="primary-nav">
           <li><a href="#introduction">About Me</a></li>
           <li><a href="#works">Latest Works</a></li>
+          <li><a href="#tm-header-gallery">Photographs</a></li>
           <li><a href="#contact">Contact Me</a></li>
         </ul>
       </nav>
@@ -278,9 +279,8 @@
   <div class="container">
     <div class="col-md-4">
       <h4>Contact</h4>
-      <p> Collins Street West Victoria 8007 Australia.<br>
-        Call: 612.269.8419 <br>
-        Email : <a href="mailto:hello@floix.com"> hello@floix.com </a></p>
+      <p> 
+        Email : <a href="mailto:hello@floix.com"> ysun56@jhu.edu </a></p>
     </div>
     <div class="col-md-3">
       <h4>Social presense</h4>
@@ -292,8 +292,8 @@
       </ul>
     </div>
     <div class="col-md-5">
-      <p>© 2015 All rights reserved. All Rights Reserved<br>
-        Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+      <p>© Fiona S.<br>
+        Made with <i class="fa fa-heart pulse"></i> </p>
     </div>
   </div>
 </footer>
