--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul class="primary-nav">
           <li><a href="#introduction">About Me</a></li>
           <li><a href="#works">Latest Works</a></li>
-          <li><a href="#tm-header-gallery">Photographs</a></li>
+          <li><a href="#photos">Photographs</a></li>
           <li><a href="#contact">Contact Me</a></li>
         </ul>
       </nav>
@@ -152,6 +152,7 @@
 <!-- work section --> 
 
  <!-- Header gallery -->
+ <section id="photos" class="photos section no-padding">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
@@ -228,7 +229,8 @@
                     </section>
                 </div>
             </div>   
-</div>             
+</div> 
+</section>            
 
 <!-- footer section -->
 <footer id="contact" class="footer">
