--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
   </div>
 </section>
 <!-- work section --> 
-
+<div></div>
+<div></div>
  <!-- Header gallery -->
  <section id="photos" class="photos section no-padding">
         <div class="container-fluid">
